[package]
name = "tr-lang-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tr-lang = { git = "https://github.com/kaiserthe13th/tr-lang" }

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[lib]
name = "tr_lang"
crate-type = ["cdylib"]

